feat: Upgrade Spring Boot to 3.5.14. Upgrade related dependencies and sources too (#90)
* feat: Spring Boot upgrade to 3.3.13: changes by Openrewrite plugin. Also: atp libraries dependencies are changed to ones already upgraded to Spring Boot 3.3.13.

* fix: Some code check errors/warns are fixed.

* fix: MultipartFile migration: Own implementation of MultipartFile interface is introduced (DiskFileItemMultipartFile). ItfLiteFileService is changed correspondingly.

* feat: Migration of http method wrapper classes to httpclient5 is performed.

* fix: Code is rewritten according to modern httpclient5/httpcore5 packages API.

* refactor: Replace org.springframework.util.ObjectUtils usages for Strings to org.apache.commons.lang3.StringUtils.

* refactor: Unify dependencies: Replace org.apache.logging.log4j.util.Strings usages to org.apache.commons.lang3.StringUtils.

* fix: Pact tests (consumer side) are migrated to au.com.dius.pact.consumer:junit5:4.6.15.

* fix: SPRING_PROFILES deployment config variable is replaced to ACTIVE_PROFILES_SPRING.

* docs: Markdown and Natural_Language errors fixed.

* build: Encrypt mode is set to "dev" to turn off encryption during 'Clean Install' step.

* fix: Bump httpclient5 dependency to 5.4.4, httpcore5 to 5.3.4.

* fix: Obsolete PostgreSQL9Dialect is replaced to PostgreSQLDialect in Hibernate properties. Also: hibernate version is fixed to 6.5.3.Final.

* fix: Mongo auto configurations are excluded from main SpringBootApplication.

* fix(deps): Missed kotlin-stdlib:1.9.25 dependency is added.

* feat: Spring Boot upgrade to 3.5.14: Initial changes by OpenRewrite plugin. Bump spring-cloud to 2025.0.2, spring-security to 6.5.10, spring-web to 6.2.18, lombok to 1.18.46. Junit:junit dependency is excluded. @NativeQuery annotation is used instead of parametrized @Query.

* feat: Spring Boot upgrade to 3.5.14: Bump atp libraries versions to ones already upgraded to 3.5.x. 

* fix(security): Bump postgresql to 42.7.7, junit-jupiter to 5.12