@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -34,10 +34,7 @@ import java.util.StringJoiner;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
-import javax.annotation.Nullable;
-
 import org.apache.commons.lang3.StringUtils;
-import org.apache.logging.log4j.util.Strings;
 import org.qubership.atp.adapter.common.adapters.AtpKafkaRamAdapter;
 import org.qubership.atp.adapter.common.adapters.providers.RamAdapterProvider;
 import org.qubership.atp.adapter.common.context.AtpCompaund;
@@ -98,6 +95,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
 
 import com.google.gson.Gson;
+import jakarta.annotation.Nullable;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
@@ -137,7 +135,7 @@ public class RamService {
                 return createdTestPlan.getUuid();
             } else {
                 throw new AtpException(
-                        String.format("Default Test Plan with name \"%s\" not found and cannot be created",
+                        "Default Test Plan with name \"%s\" not found and cannot be created".formatted(
                                 DEFAULT_ITF_LITE_RUN_COLLECTION_TEST_PLAN_NAME));
             }
         } else {
@@ -273,8 +271,8 @@ public class RamService {
         resultMessage.setResponse(createLogRecordPartsResponse(request, requestExecutionResponse));
         resultMessage.setProtocolType(request.getTransportType().toString());
         resultMessage.setItfLiteRequestId(request.getId());
-        resultMessage.setIsPreScriptPresent(Strings.isNotBlank(request.getPreScripts()));
-        resultMessage.setIsPostScriptPresent(Strings.isNotBlank(request.getPostScripts()));
+        resultMessage.setIsPreScriptPresent(StringUtils.isNotBlank(request.getPreScripts()));
+        resultMessage.setIsPostScriptPresent(StringUtils.isNotBlank(request.getPostScripts()));
         setTimestampInMessage(requestExecutionResponse, resultMessage);
         log.debug("Send rest message with id = {} into ram adapter", resultMessage.getUuid());
         AtpRamWriter atpRamWriter = AtpRamWriter.getAtpRamWriter();
@@ -419,14 +417,14 @@ public class RamService {
 
     private void addFromDataPart(StringJoiner sj, String logRecordId, FormDataPart fdp) {
         if (ValueType.TEXT.equals(fdp.getType())) {
-            sj.add(String.format("%s: %s", fdp.getKey(), fdp.getValue()));
+            sj.add("%s: %s".formatted(fdp.getKey(), fdp.getValue()));
         } else {
             UUID fileId = fdp.getFileId();
             if (nonNull(fileId)) {
                 Optional<FileData> optFile = gridFsService.downloadFileByFileId(fileId);
                 if (optFile.isPresent()) {
                     FileData file = optFile.get();
-                    sj.add(String.format("%s: %s", fdp.getKey(),
+                    sj.add("%s: %s".formatted(fdp.getKey(),
                             createLinkToDownloadFile(logRecordId, fdp.getFileId(), file)));
                     AtpRamWriter.getAtpRamWriter().uploadFileForLogRecord(logRecordId,
                             new ByteArrayInputStream(file.getContent()), fdp.getFileId().toString());
@@ -529,7 +527,7 @@ public class RamService {
                 throw new ItfLiteIllegalTestRunsCountInExecutionRequestException(executionRequestId);
             }
             contextVariableDtoResponse =
-                    ramTestRunsFeignClient.getAllContextVariables(testRunDto.get(0).getUuid());
+                    ramTestRunsFeignClient.getAllContextVariables(testRunDto.getFirst().getUuid());
         }
 
         if (request.getImportEntityType().equals(ImportContextRequest.ImportEntityType.TEST_RUN)) {
@@ -581,7 +579,7 @@ public class RamService {
                 log.error("Execution Request must contain only one test run to import cookies");
                 throw new ItfLiteIllegalTestRunsCountInExecutionRequestException(erId);
             }
-            return parseCookieFromLogRecords(testRunIds.get(0), null);
+            return parseCookieFromLogRecords(testRunIds.getFirst(), null);
         }
         return null;
     }
@@ -603,9 +601,8 @@ public class RamService {
         List<LogRecordDto> logRecords = ramTestRunsFeignClient.getAllFilteredLogRecords(testRunId, filter).getBody();
         if (!CollectionUtils.isEmpty(logRecords)) {
             for (LogRecordDto logRecord : logRecords) {
-                if (logRecord instanceof RestLogRecordDto) {
-                    RestLogRecordDto restLogRecord = ((RestLogRecordDto) logRecord);
-                    importedCookies.addAll(parseRestLogRecordCookie(restLogRecord));
+                if (logRecord instanceof RestLogRecordDto dto) {
+                    importedCookies.addAll(parseRestLogRecordCookie(dto));
                 }
 
                 if (logRecord.getUuid().equals(logRecordId)) {
@@ -663,7 +660,7 @@ public class RamService {
     public void openNewExecuteRequestSection(String requestName, Long createdDateStamp) {
         Message msg = new Message();
         msg.setType(TypeAction.ITF.name());
-        msg.setName(String.format("Execute request \"%s\"", requestName));
+        msg.setName("Execute request \"%s\"".formatted(requestName));
         msg.setExecutionStatus(ExecutionStatuses.IN_PROGRESS.name());
         msg.setCreatedDateStamp(createdDateStamp);
         AtpRamWriter writer = AtpRamWriter.getAtpRamWriter();
