@@ -1,7 +1,7 @@
 package org.qubership.atp.itf.lite.backend.service.kafka;
 
-import static org.junit.Assert.assertTrue;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doCallRealMethod;
@@ -68,7 +68,7 @@ class KafkaGetAccessTokenServiceTest {
         //check
         verify(kafkaTemplate, times(1)).send(topicNameCaptor.capture(), sseIdCaptor.capture(),
                 itfLiteGetAccessTokenFinishEventCaptor.capture());
-        assertEquals(kafkaGetAccessTokenService.finishTopic, topicNameCaptor.getAllValues().get(0));
+        assertEquals(kafkaGetAccessTokenService.finishTopic, topicNameCaptor.getAllValues().getFirst());
     }
 
     @Test
